[metadata]
name = imbi
version = file: VERSION
description = Imbi is a DevOps Service Management Platform designed to provide an efficient way to manage a large environment that contains many services and applications.
author = Gavin M. Roy
author_email = gavinr@aweber.com
license = BSD 3-Clause License
license_files =
    LICENSE
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
home_page = https://github.com/aweber/imbi
project_urls =
    Bug Tracker = https://github.com/aweber/imbi/issues
    Documentation = https://imbi.readthedocs.io
    Source Code = https://github.com/aweber/imbi
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: JavaScript
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: SQL
    Topic :: Office/Business
    Topic :: Software Development
    Topic :: System
    Topic :: System :: Monitoring
    Topic :: System :: Systems Administration
    Topic :: Utilities
keywords =
    devops
    python3
    datacenter
    operations

[options]
python_requires = >=3.7
include_package_data = True
install_requires =
    aioboto3>=12.3.0,<13
    aioredis>=1.2.0,<2
    arrow>=0.15.5,<1
    cel-python>=0.4.0,<0.5.0
    cookiecutter>=1.7,<1.8
    cryptography==37.0.4
    distro==1.5.0
    flatdict
    google-auth
    google-auth-oauthlib
    jsonpatch>=1.25,<2
    jsonschema==4.17.3
    ietfparse>=1.5.1,<2
    isodate==0.6.0
    iso8601
    isort==5.9.2
    ldap3>=2.5,<3
    openapi-core>=0.14.2,<0.15.0
    openapi-schema-validator==0.1.1
    openapi-spec-validator==0.2.9
    opensearch-py[async]>=1,<2
    packaging>=24,<25
    pycurl
    pydantic>=2.11.9,<3
    python-ulid>=1,<2
    pyyaml
    semantic-version>=2.10,<3
    sprockets.http>2,<3
    sprockets.mixins.correlation>=2,<3
    sprockets.mixins.http>=2.2,<3
    sprockets.mixins.mediatype>3,<4
    sprockets-postgres>=1.8.1,<2
    tornado==6.1
    tornado-problem-details>=0.0.6,<1
    tornado_openapi3>=1.1.2,<2
    typing-extensions>=4.9,<5
    u-msgpack-python>=2.1,<3
    validators
    yapf==0.31.0
    yarl>=1.6,<2

packages = find:
zip_safe = true

[options.packages.find]
where = .
include = imbi*
exclude = tests

[options.entry_points]
console_scripts =
    imbi = imbi.server:run

[options.extras_require]
sentry =
    sentry-sdk>=0.19.5,<1
testing =
    bandit==1.6.2
    coverage==5.0.4
    flake8==7.3.0
    flake8-comprehensions==3.17.0
    flake8-deprecated==1.3
    flake8-import-order==0.18.1
    flake8-quotes==3.0.0
    flake8-rst-docstrings==0.0.13
    flake8-tuple==0.4.1
    pre-commit==4.3.0

[entry_points]
bandit.formatters =
    screen = bandit_screen:formatter

[coverage:run]
branch = True
command_line = -m unittest discover tests --verbose
data_file = build/.coverage

[coverage:report]
show_missing = True
include =
    imbi/*
omit =
    tests/*.py

[coverage:html]
directory = build/coverage

[coverage:xml]
output = build/coverage.xml

[flake8]
application-import-names = imbi,tests
exclude = acceptance,build,ci,dist,env,scaffolding
import-order-style = pycharm
rst-roles = attr,class,const,data,exc,func,meth,mod,obj

[yapf]
allow_multiline_dictionary_keys = True
allow_split_before_dict_value = False
