[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "imbi-assistant"
version = "0.0.0"
description = "Imbi AI assistant service"
readme = "README.md"
requires-python = ">=3.12"
license = "BSD-3-Clause"
authors = [{ name = "Gavin M. Roy", email = "gavinr@aweber.com" }]
dependencies = [
  "anthropic>=0.49.0",
  "fastapi>=0.135.1",
  "httpx>=0.28.1",
  "imbi-common[server]",
  "pydantic~=2.12",
]

[project.scripts]
imbi-assistant = "imbi_assistant.app:cli"

[dependency-groups]
dev = [
  "basedpyright>=1.37.1",
  "coverage[toml]>=7.13.1",
  "httpx>=0.28.1",
  "mypy~=1.19.1",
  "pre-commit>=4.5.1",
  "python-dotenv>=1.1.0",
  "pytest>=9.0.2",
  "pytest-cov>=7.0.0",
  "ruff~=0.14.6",
]

[tool.coverage.report]
fail_under = 90
show_missing = true

[tool.coverage.run]
branch = true
source = ["src"]

[tool.mypy]
namespace_packages = true
show_error_codes = true
strict = true
packages = ["imbi_assistant", "tests"]

[tool.pyright]
deprecateTypingAliases = true
reportMissingSuperCall = "hint"
typeCheckingMode = "strict"

[[tool.pyright.executionEnvironments]]
root = "src"
reportUnusedFunction = "warning"

[[tool.pyright.executionEnvironments]]
root = "tests"
reportUnusedFunction = "none"
extraPaths = ["src", "."]

[tool.ruff]
line-length = 79
target-version = "py312"

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = [
  "A",
  "ANN",
  "ARG",
  "ASYNC",
  "B",
  "BLE",
  "C4",
  "C90",
  "DTZ",
  "E",
  "ERA",
  "F",
  "FLY",
  "FURB",
  "G",
  "I",
  "LOG",
  "N",
  "PIE",
  "PL",
  "PTH",
  "Q",
  "RET",
  "RSE",
  "RUF",
  "S",
  "SIM",
  "T10",
  "T20",
  "TC",
  "TRY",
  "W",
]
ignore = [
  "TRY003",
  "TRY400",
]
flake8-quotes = { inline-quotes = "single" }

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
  "--cov=src/imbi_assistant",
  "--cov-report=xml:build/coverage.xml",
  "--cov-report=term",
]

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true

[tool.uv.sources]
imbi-common = { git = "https://github.com/AWeber-Imbi/imbi-common", rev = "main" }
