[project]
name = "imbi-common"
version = "0.1.0"
description = "Shared library for the Imbi ecosystem providing core data access, authentication primitives, and domain models"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "BSD-3-Clause" }
authors = [{ name = "Gavin M. Roy", email = "gavinr@aweber.com" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "clickhouse-connect",
  "cryptography>=42.0.4",
  "fastembed>=0.6",
  "jsonschema-models",
  "markdown-it-py>=3.0",
  "nanoid>=2.0.0",
  "orjson",
  "pgvector>=0.3",
  "psycopg[binary,pool]>=3.3",
  "pydantic-settings",
  "pydantic[email]>=2.0",
  "pyjwt>=2.10.1",  # CVE-2025-45768 disputed, monitor for 2.11.0+ when available
  "python-slugify",
  "typer>=0.21.1",
]
license-file = "LICENSE"

[project.optional-dependencies]
server = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.40.0",
]

[dependency-groups]
dev = [
  "basedpyright",
  "build",
  "click~=8.2.1",  # 8.3+ breaks mkdocs serve (https://github.com/mkdocs/mkdocs/issues/4032)
  "coverage[toml]",
  "httpx",
  "mypy~=1.19.1",
  "pre-commit",
  "pytest",
  "ruff~=0.14.6",
  "sentry-sdk>=2.48.0",
  "tomli-w~=1.2",
  "uvicorn[standard]>=0.40.0",
]
dist = ["build", "twine", "wheel"]
docs = [
  "griffe-pydantic",
  "mkdocs>=1.5,<2",
  "mkdocs-material>9.5,<10",
  "mkdocstrings-python-xref>=1.6,<2",
  "mkdocstrings[python]"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.coverage.report]
exclude_also = ["typing.TYPE_CHECKING"]
fail_under = 90
show_missing = true

[tool.coverage.run]
branch = true
source = ["src/imbi_common"]

[tool.hatch.build.targets.wheel]
packages = ["src/imbi_common"]
include = ["src/imbi_common/log-config.toml"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.mkdocs]
config-file = "mkdocs.yml"

[tool.mypy]
python_executable = ".venv/bin/python"
strict = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["nanoid", "pgvector.*"]
ignore_missing_imports = true

[tool.pyright]
executionEnvironments = [
  { root = "src" },
  { root = "tests", reportPrivateUsage = false },
]
deprecateTypingAliases = true
reportMissingSuperCall = "hint"
reportMissingTypeStubs = false
typeCheckingMode = "strict"

[tool.ruff]
line-length = 79
target-version = "py312"

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = [
  "BLE",  # flake8-blind-except
  "C4",  # flake8-comprehensions
  "C90",  # mccabe
  "E",
  "W",  # pycodestyle
  "F",  # pyflakes
  "G",  # flake8-logging-format
  "I",  # isort
  "N",  # pep8-naming
  "Q",  # flake8-quotes
  "S",  # flake8-bandit
  "ASYNC",  # flake8-async
  "B",  # flake8-bugbear
  "DTZ",  # flake8-datetimez
  "FURB",  # refurb
  "RUF",  # ruff-specific
  "T20",  # flake8-print
  "UP",  # pyupgrade
]
ignore = [
  "N818",  # exception class names are not required to end in Error
  "RSE",  # contradicts Python Style Guide
  "S105",  # false positives on non-password strings
  "TRY003",  # message text in exception initializers is okay
  "TRY400",  # logging.exception is not always preferable
  "UP047",  # type parameter syntax not yet adopted
]
flake8-quotes = { inline-quotes = "single" }

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S"]

[tool.uv]
# dependency groups that are installed by `uv run`
# https://docs.astral.sh/uv/reference/settings/#default-groups
default-groups = ["dev"]

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true
