[project]
name = "imbi-common"
version = "2.11.7"
description = "Shared library for the Imbi ecosystem providing core data access, authentication primitives, and domain models"
readme = "README.md"
requires-python = ">=3.14"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
authors = [
  { name = "Gavin M. Roy", email = "gavinr@aweber.com" },
  { name = "Dave Shawley", email = "daves@aweber.com" }
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "cryptography>=42.0.4",
  "httpx>=0.28.1,<1",
  "jsonpointer>=3.1.1",
  "jsonschema-models",
  "markdown-it-py>=3.0",
  "nanoid>=2.0.0",
  "orjson",
  "pydantic-settings",
  "pydantic[email]>=2.0",
  "pyjwt>=2.10.1",  # CVE-2025-45768 disputed, monitor for 2.11.0+ when available
  "python-slugify",
  "typer>=0.21.1",
]

[project.optional-dependencies]
databases = [
  "clickhouse-connect[async]==1.0.0",
  "fastembed>=0.6",
  "pgvector>=0.3",
  "psycopg[binary,pool]>=3.3",
  "valkey>=6",
]
llm = [
  "anthropic>=0.40",
]
mcp = [
  "fastmcp>=3,<4",
]
otel = [
  "opentelemetry-api==1.41.1",
  "opentelemetry-distro==0.62b1",
  "opentelemetry-exporter-otlp-proto-http==1.41.1",
  "opentelemetry-instrumentation-aiohttp-client==0.62b1",
  "opentelemetry-instrumentation-asyncio==0.62b1",
  "opentelemetry-instrumentation-fastapi==0.62b1",
  "opentelemetry-instrumentation-httpx==0.62b1",
  "opentelemetry-instrumentation-mcp==0.60.0",
  "opentelemetry-instrumentation-psycopg==0.62b1",
  "opentelemetry-instrumentation-redis==0.62b1",
  "opentelemetry-sdk==1.41.1",
]
sentry = [
  "sentry-sdk>=2.48.0",
]
server = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.40.0",
]

[dependency-groups]
dev = [
  "basedpyright",
  "build",
  "click~=8.2.1",  # 8.3+ breaks mkdocs serve (https://github.com/mkdocs/mkdocs/issues/4032)
  "coverage[toml]",
  "httpx>=0.28.1,<1",
  "mypy~=1.19.1",
  "pre-commit",
  "pytest",
  "ruff~=0.14.6",
  "sentry-sdk>=2.48.0",
  "tomli-w~=1.2",
  "uvicorn[standard]>=0.40.0",
]
dist = ["build", "twine", "wheel"]
docs = [
  "griffe-pydantic",
  "mkdocs>=1.5,<2",
  "mkdocs-material>9.5,<10",
  "mkdocstrings-python-xref>=1.6,<2",
  "mkdocstrings[python]"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.coverage.report]
exclude_also = ["typing.TYPE_CHECKING"]
fail_under = 90
show_missing = true

[tool.coverage.run]
branch = true
source = ["src/imbi_common"]

[tool.hatch.build.targets.wheel]
packages = ["src/imbi_common"]
include = [
  "src/imbi_common/log-config.toml",
  "src/imbi_common/clickhouse/schemata.toml",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.mkdocs]
config-file = "mkdocs.yml"

[tool.mypy]
python_executable = ".venv/bin/python"
strict = true

[[tool.mypy.overrides]]
module = ["clickhouse_connect.*", "jsonpointer", "nanoid", "pgvector.*"]
ignore_missing_imports = true

[tool.pyright]
executionEnvironments = [
  { root = "src" },
  { root = "tests", reportPrivateUsage = false },
]
deprecateTypingAliases = true
reportMissingSuperCall = "information"
reportMissingTypeStubs = false
typeCheckingMode = "strict"

[tool.ruff]
line-length = 79
target-version = "py314"

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = [
  "BLE",  # flake8-blind-except
  "C4",  # flake8-comprehensions
  "C90",  # mccabe
  "E",
  "W",  # pycodestyle
  "F",  # pyflakes
  "G",  # flake8-logging-format
  "I",  # isort
  "N",  # pep8-naming
  "Q",  # flake8-quotes
  "S",  # flake8-bandit
  "ASYNC",  # flake8-async
  "B",  # flake8-bugbear
  "DTZ",  # flake8-datetimez
  "FURB",  # refurb
  "RUF",  # ruff-specific
  "T20",  # flake8-print
  "UP",  # pyupgrade
]
ignore = [
  "N818",  # exception class names are not required to end in Error
  "RSE",  # contradicts Python Style Guide
  "S105",  # false positives on non-password strings
  "TRY003",  # message text in exception initializers is okay
  "TRY400",  # logging.exception is not always preferable
  "UP047",  # type parameter syntax not yet adopted
]
flake8-quotes = { inline-quotes = "single" }

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S"]

[tool.uv]
# dependency groups that are installed by `uv run`
# https://docs.astral.sh/uv/reference/settings/#default-groups
default-groups = ["dev"]
exclude-newer = "7 days"

[tool.uv.exclude-newer-package]
clickhouse-connect = false
imbi-common = false
imbi-plugin-aws = false
imbi-plugin-github = false
imbi-plugin-logzio = false
imbi-plugin-oidc = false
imbi-plugin-pagerduty = false
imbi-plugin-sentry = false
imbi-plugin-sonarqube = false

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true
