[project]
name = "imbi-gateway"
version = "2.11.4"
description = "Imbi webhook receiver"
readme = "README.md"
requires-python = ">=3.14"
license = "BSD-3-Clause"
authors = [{ name = "Dave Shawley", email = "daves@aweber.com" }]
dependencies = [
  "cel-python>=0.5.0",
  "fastapi>=0.135.1",
  "httpx>=0.28.1",
  "imbi-common[databases,server]==2.11.4",
  "jsonpointer>=3.1.1",
  "psycopg[binary,pool]~=3.3.2",
  "pydantic~=2.12",
  "sentry-sdk>=2.48.0",
  "yarl~=1.22.0",
]

[project.scripts]
imbi-gateway = "imbi_gateway.app:cli"

[project.entry-points."imbi.plugins"]
gateway-actions = "imbi_gateway.plugin:GatewayActionsPlugin"

[project.optional-dependencies]
plugins = [
  "imbi-plugin-github~=1.0",
  "imbi-plugin-sonarqube>=0.0.0",
]

[dependency-groups]
dev = [
  "basedpyright>=1.37.1",
  "coverage[toml]>=7.13.1",
  "httpx>=0.28.1",
  "mypy~=1.19.1",
  "pre-commit>=4.5.1",
  "pytest~=9.0",
  "pytest-cov>=7.0.0",
  "ruff~=0.15.0",
  "types-nanoid>=2.0.0.20260408",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.coverage.report]
fail_under = 90
show_missing = true

[tool.coverage.run]
branch = true
source = ["src"]

[tool.mypy]
namespace_packages = true  # required for opentelemetry
show_error_codes = true
strict = true
packages = ["imbi_gateway", "tests"]
mypy_path = ["typings"]

[tool.pyright]
deprecateTypingAliases = true
reportMissingSuperCall = "hint"
typeCheckingMode = "strict"

[[tool.pyright.executionEnvironments]]
root = "src"
reportUnusedFunction = "warning"

[[tool.pyright.executionEnvironments]]
root = "tests"
reportUnusedFunction = "none"  # flags decorated local functions used as request handlers
extraPaths = ["src", "."]  # '.' allows imports from `tests` to work

[tool.ruff]
line-length = 79
target-version = "py314"
extend-exclude = ["typings"]

[tool.ruff.format]
quote-style = "single"
skip-magic-trailing-comma = true

[tool.ruff.lint]
select = [
  "A",
  "ANN",
  "ARG",
  "ASYNC",
  "B",
  "BLE",
  "C4",
  "C90",
  "DTZ",
  "E",
  "ERA",
  "F",
  "FLY",
  "FURB",
  "G",
  "I",
  "LOG",
  "N",
  "PIE",
  "PL",
  "PTH",
  "Q",
  "RET",
  "RSE",
  "RUF",
  "S",
  "SIM",
  "T10",
  "T20",
  "TC",
  "TRY",
  "W",
]
ignore = [
  "TRY003",  # message text in exception initializers is okay
  "TRY400",  # logging.exception is not always preferable
]
flake8-quotes = { inline-quotes = "single" }
flake8-type-checking = { runtime-evaluated-base-classes = [
  "pydantic.BaseModel",
  "pydantic_settings.BaseSettings",
] }
isort = { split-on-trailing-comma = false }

[tool.uv]
exclude-newer = "7 days"
exclude-newer-package = { "clickhouse-connect" = false, "imbi-common" = false, "imbi-plugin-aws" = false, "imbi-plugin-github" = false, "imbi-plugin-logzio" = false, "imbi-plugin-oidc" = false, "imbi-plugin-pagerduty" = false, "imbi-plugin-sentry" = false, "imbi-plugin-sonarqube" = false }

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true
