[project]
name = "imbi-mcp"
version = "2.14.0"
description = "Imbi MCP server"
readme = "README.md"
requires-python = ">=3.14"
license = "BSD-3-Clause"
authors = [{ name = "Gavin M. Roy", email = "gavinr@aweber.com" }]
dependencies = [
  "fastmcp>=3.4.4",
  "httpx>=0.28.1",
  "imbi-common[mcp]==2.14.0",
  "pydantic~=2.12",
  "pyjwt>=2.10",
  "sentry-sdk>=2.48.0",
]

[project.scripts]
imbi-mcp = "imbi_mcp.app:cli"

[dependency-groups]
dev = [
  "basedpyright>=1.37.1",
  "coverage[toml]>=7.13.1",
  "mypy~=1.19.1",
  "pre-commit>=4.5.1",
  "pytest>=9.0.2",
  "pytest-cov>=7.0.0",
  "python-dotenv>=1.1.0",
  "ruff~=0.14.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.coverage.report]
fail_under = 90
show_missing = true

[tool.coverage.run]
branch = true
source = ["src"]

[tool.mypy]
namespace_packages = true
show_error_codes = true
strict = true
packages = ["imbi_mcp", "tests"]

[tool.pyright]
deprecateTypingAliases = true
reportMissingSuperCall = "hint"
typeCheckingMode = "strict"

[[tool.pyright.executionEnvironments]]
root = "src"
reportUnusedFunction = "warning"

[[tool.pyright.executionEnvironments]]
root = "tests"
reportPrivateUsage = "none"
reportUnusedFunction = "none"
# Starlette's TestClient is loosely typed once httpx typing is optional
# (fastmcp 3.4.x's starlette), so response access reads as Unknown here.
# Relaxed for tests only; src stays strict.
reportUnknownMemberType = "none"
reportUnknownVariableType = "none"
reportUnknownArgumentType = "none"
extraPaths = ["src", "."]

[tool.pytest.ini_options]
addopts = [
  "--cov=src/imbi_mcp",
  "--cov-report=xml:build/coverage.xml",
  "--cov-report=term",
]
testpaths = ["tests"]

[tool.ruff]
line-length = 79
target-version = "py314"

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = [
  "A",
  "ANN",
  "ARG",
  "ASYNC",
  "B",
  "BLE",
  "C4",
  "C90",
  "DTZ",
  "E",
  "ERA",
  "F",
  "FLY",
  "FURB",
  "G",
  "I",
  "LOG",
  "N",
  "PIE",
  "PL",
  "PTH",
  "Q",
  "RET",
  "RSE",
  "RUF",
  "S",
  "SIM",
  "T10",
  "T20",
  "TC",
  "TRY",
  "W",
]
ignore = [
  "TRY003",
  "TRY400",
]
flake8-quotes = { inline-quotes = "single" }

[tool.uv]
exclude-newer = "7 days"
exclude-newer-package = { "fastmcp" = false, "fastmcp-slim" = false, "clickhouse-connect" = false, "imbi-common" = false, "imbi-plugin-aws" = false, "imbi-plugin-github" = false, "imbi-plugin-logzio" = false, "imbi-plugin-oidc" = false, "imbi-plugin-pagerduty" = false, "imbi-plugin-sentry" = false, "imbi-plugin-sonarqube" = false }

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true
