[project]
name = "imbi-plugin-aws"
version = "1.0.0"
description = "AWS plugins for Imbi (IAM Identity Center, SSM, CloudWatch Logs)"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "BSD-3-Clause" }
authors = [{ name = "Gavin M. Roy", email = "gavinr@aweber.com" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "httpx>=0.27,<1",
  "imbi-common>=0.8.3",
  "pydantic>=2",
]

[project.entry-points."imbi.plugins"]
aws-cloudwatch-logs = "imbi_plugin_aws.cloudwatch:CloudWatchLogsPlugin"
aws-iam-ic = "imbi_plugin_aws.identity:AwsIamIcPlugin"
aws-ssm = "imbi_plugin_aws.ssm:SsmPlugin"

[dependency-groups]
dev = [
  "basedpyright",
  "coverage[toml]",
  "httpcore",
  "imbi-common[server,databases]",
  "pre-commit",
  "pytest",
  "pytest-asyncio",
  "respx",
  "ruff~=0.14.6",
]
dist = ["build", "twine", "wheel"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/imbi_plugin_aws"]

[tool.coverage.report]
exclude_also = ["typing.TYPE_CHECKING"]
fail_under = 85
show_missing = true

[tool.coverage.run]
branch = true
source = ["src/imbi_plugin_aws"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.pyright]
executionEnvironments = [
  { root = "src" },
  { root = "tests", reportPrivateUsage = false },
]
deprecateTypingAliases = true
reportMissingSuperCall = "hint"
reportMissingTypeStubs = false
typeCheckingMode = "strict"

[tool.ruff]
line-length = 79
target-version = "py314"

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = [
  "BLE",
  "C4",
  "C90",
  "E",
  "W",
  "F",
  "G",
  "I",
  "N",
  "Q",
  "S",
  "ASYNC",
  "B",
  "DTZ",
  "FURB",
  "RUF",
  "T20",
  "UP",
]
ignore = [
  "ASYNC109",
  "N818",
  "RSE",
  "S105",
  "TRY003",
  "TRY400",
  "UP047",
]
flake8-quotes = { inline-quotes = "single" }

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S"]

[tool.uv]
default-groups = ["dev"]

# Track imbi-common's ``main`` directly until a release with the
# ``ops_log_templates`` field on ``PluginManifest`` is cut.  Drop this
# block (and bump the ``imbi-common`` floor above) once that release
# ships.
[tool.uv.sources]
imbi-common = { git = "https://github.com/AWeber-Imbi/imbi-common.git", branch = "main" }

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true
