[project]
name = "imbi-plugin-github"
version = "1.5.0"
description = "GitHub identity plugin for Imbi (github.com / GHEC / GHES)"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "BSD-3-Clause" }
authors = [{ name = "Gavin M. Roy", email = "gavinr@aweber.com" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "httpx>=0.27",
  "imbi-common>=2.8.0",
  "pydantic>=2",
]

[project.entry-points."imbi.plugins"]
github = "imbi_plugin_github.identity:GitHubPlugin"
github-enterprise-cloud = "imbi_plugin_github.identity:GitHubEnterpriseCloudPlugin"
github-enterprise-server = "imbi_plugin_github.identity:GitHubEnterpriseServerPlugin"
github-deployment = "imbi_plugin_github.deployment:GitHubDeploymentPlugin"
github-deployment-ec = "imbi_plugin_github.deployment:GitHubEnterpriseCloudDeploymentPlugin"
github-deployment-es = "imbi_plugin_github.deployment:GitHubEnterpriseServerDeploymentPlugin"
github-lifecycle = "imbi_plugin_github.lifecycle:GitHubLifecyclePlugin"
github-lifecycle-ec = "imbi_plugin_github.lifecycle:GitHubEnterpriseCloudLifecyclePlugin"
github-lifecycle-es = "imbi_plugin_github.lifecycle:GitHubEnterpriseServerLifecyclePlugin"

[dependency-groups]
dev = [
  "basedpyright",
  "coverage[toml]",
  "imbi-common[server,databases]",
  "pre-commit",
  "pytest",
  "pytest-asyncio",
  "respx",
  "ruff~=0.14.6",
]
dist = ["build", "twine", "wheel"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.coverage.report]
exclude_also = ["typing.TYPE_CHECKING"]
fail_under = 85
show_missing = true

[tool.coverage.run]
branch = true
source = ["src/imbi_plugin_github"]

[tool.hatch.build.targets.wheel]
packages = ["src/imbi_plugin_github"]

[tool.pyright]
executionEnvironments = [
  { root = "src" },
  { root = "tests", reportPrivateUsage = false },
]
deprecateTypingAliases = true
reportMissingSuperCall = "hint"
reportMissingTypeStubs = false
typeCheckingMode = "strict"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 79
target-version = "py314"

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = [
  "BLE",
  "C4",
  "C90",
  "E",
  "W",
  "F",
  "G",
  "I",
  "N",
  "Q",
  "S",
  "ASYNC",
  "B",
  "DTZ",
  "FURB",
  "RUF",
  "T20",
  "UP",
]
ignore = [
  "ASYNC109",
  "N818",
  "RSE",
  "S105",
  "TRY003",
  "TRY400",
  "UP047",
]
flake8-quotes = { inline-quotes = "single" }

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S"]

[tool.uv]
default-groups = ["dev"]
exclude-newer = "7 days"
exclude-newer-package = { "clickhouse-connect" = false, "imbi-common" = false, "imbi-plugin-aws" = false, "imbi-plugin-github" = false, "imbi-plugin-logzio" = false, "imbi-plugin-oidc" = false, "imbi-plugin-pagerduty" = false, "imbi-plugin-sentry" = false, "imbi-plugin-sonarqube" = false }

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true

# Pinned to the imbi-common #138 merge commit while 2.8.0 is unreleased.
# An immutable rev is used (instead of branch = "main") so the build is
# reproducible.  Remove this entire block when imbi-common 2.8.0 ships
# to PyPI.
[tool.uv.sources]
imbi-common = { git = "https://github.com/AWeber-Imbi/imbi-common.git", rev = "d21cc8818f238cfe02625ac6f292091c526ed787" }
